--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+  #body {
+   background-image: url("app_background.jpeg");
+   background-color: #cccccc;
+    min-height: 100%;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.topnav {
+  background-color: #dee0e2;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background: rgba(211, 211, 211, 0.6);
+}
+
+
+</style>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <title>TRON Message Board</title>
   </head>
-  <body>
+  <body id="body" style="color:white;">
+
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+
     <div id="root"></div>
   </body>
 </html>
